traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:4: error: illegal start of statement (no modifiers allowed here)
	override def forward(i:Int)  { 
        ^TraversalZigZag:7: error: illegal start of statement (no modifiers allowed here)
	override def forward()  {
        ^TraversalZigZag:10: error: illegal start of statement (no modifiers allowed here)
	override def backward(i:Int) {
        ^TraversalZigZag:13: error: illegal start of statement (no modifiers allowed here)
	override def backward() {
        ^TraversalZigZag:16: error: Missing closing brace `}' assumed here
}
^